<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">News</string>
    <string name="internet_state">No internet connection.</string>
    <string name="empty">No News found.</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">News Settings</string>

    <!-- Strings For minimum magnitude Preference [CHAR LIMIT=30] -->
    <string name="settings_min_magnitude_label">Start Date</string>
    <string name="settings_min_magnitude_key" translatable="false">min_magnitude</string>
    <string name="settings_min_magnitude_default" translatable="false">0</string>

    <!-- Strings For minimum magnitude Preference [CHAR LIMIT=30] -->
    <string name="settings_from_date_label">From Date</string>
    <string name="settings_from_date_key" translatable="false">from-date</string>
    <string name="settings_from_date_default" translatable="false">2016-12-01</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">newest</string>
    <string name="settings_order_by_default" translatable="false">newest</string>

    <!-- Label for order-by oldest option [CHAR LIMIT=20] -->
    <string name="settings_order_by_magnitude_label">Oldest</string>
    <string name="settings_order_by_magnitude_value" translatable="false">oldest</string>

    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_most_recent_label">Most Recent</string>
    <string name="settings_order_by_most_recent_value" translatable="false">newest</string>



    <!-- Strings For New Type Preference -->
    <string name="settings_news_type_label">News From</string>
    <string name="settings_news_type_by_key" translatable="false">world</string>
    <string name="settings_news_type_by_default" translatable="false">world</string>

    <!-- Label for UK News option [CHAR LIMIT=20] -->
    <string name="settings_uk_news_label">UK News</string>
    <string name="settings_uk_news_by_key" translatable="false">uk-news</string>
    <string name="settings_uk_news_value" translatable="false">uk-news</string>

    <!-- Label for US News option [CHAR LIMIT=20] -->
    <string name="settings_us_news_label">US News</string>
    <string name="settings_us_news_by_key" translatable="false">us-news</string>
    <string name="settings_us_news_value" translatable="false">us-news</string>

    <!-- Label for World News option [CHAR LIMIT=20] -->
    <string name="settings_world_news_label">World News</string>
    <string name="settings_world_news_by_key" translatable="false">world</string>
    <string name="settings_world_news_value" translatable="false">world</string>

    <string name="guardian_api_key">61841e93-3fdf-48dc-96a6-bda4e03a1868</string>
</resources>






