<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <com.example.android.newsapp.DatePreference
        android:key="@string/settings_min_magnitude_key"
        android:title="@string/settings_min_magnitude_label"
        android:selectAllOnFocus="true"
        android:defaultValue="@string/settings_from_date_default"
        android:summary="Summary"/>

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

    <ListPreference
        android:defaultValue="@string/settings_news_type_by_default"
        android:entries="@array/settings_news_labels"
        android:entryValues="@array/settings_news_types"
        android:key="@string/settings_news_type_by_key"
        android:title="@string/settings_news_type_label" />

</PreferenceScreen>